# BSC

./: .gitignore  04Jan.md  9DecemberFindings.md  README.md  SummarySoFar.md  TRACKER_PLAN.md  VERIFICATION_2026-01-17.md  desktopuiplan.md  implementation_plan.md  interesting.md  mlock_tool.cpp  parse_trace.py  server_specs.md  setup.md  warnings.md
Benchmark/: INITIAL_PLAN.md  README.md  blktrace.md  experiments.py  improvements.md  run_experiment.py  settings.json
Benchmark/journal/: 21DEC.md  21DECP2.md  21DECP4.md  CRITICAL_REVIEW_params_ith.md  Issues.md
Benchmark/journal/INVALIDATED/: 21DECP3.md  README.md
Benchmark/utils/: __init__.py  analysis_tools.py  analyze_blktrace.py  monitor_system.sh  setup_tools.py
archive/: IMPLEMENTATION_SUMMARY.md  PLAN.md  TRACKER_PLAN.md  implementation_plan.md  interesting.md
desktopui/: CMakeLists.txt  README.md  imgui.ini  launch_all_domains.sh
desktopui/src/: HeatmapView.cpp  HeatmapView.h  TraceTableView.cpp  TraceTableView.h  main.cpp
disk-benchmarking/: README.md  run_experiment.py  settings.json
disk-benchmarking/utils/: __init__.py  analysis_tools.py
docs/: experimental-hypotheses.md  future-work.md  llama-architecture.md  related-work.md  server-setup.md
journal/: 2025-12-20.md  2025-12-22.md  2025-12-30.md  2026-01-02.md  2026-01-07.md  2026-01-08.md  2026-01-13.md  2026-01-14.md  2026-01-17.md  2026-01-25.md  2026-01-26.md  2026-02-05.md  2026-02-07.md
tensor-tracing/: ANALYSIS.md  DEVELOPMENT_PLAN.md  EXPERT_EXPERIMENT_PLAN.md  README.md  WEBUI.md  prompts.json  run_experiment.py  run_expert_experiments.sh  settings.json  setup.md
tensor-tracing/data/: memory-map.json
tensor-tracing/data-analytics/: README.md
tensor-tracing/data-analytics/notebooks/: 01_expert_activation_analysis.ipynb
tensor-tracing/data/graphs/: token-00000.json  token-00001.json  token-00002.json
tensor-tracing/desktopui/: imgui.ini  launch_all_domains.sh
tensor-tracing/desktopui/src/: HeatmapView.cpp  JSONLoader.cpp  JSONLoader.h  MemoryMap.h  TraceData.h  TraceTableView.cpp  main.cpp
tensor-tracing/tools/: parse_buffer_stats.py  parse_csv.py  parse_dot.py  parse_trace.py  parse_trace_old.py  parse_trace_v2.py  preprocess_all.py
tensor-tracing/webui/: README.md  package-lock.json  package.json  tailwind.config.js
tensor-tracing/webui/public/data/: buffer-timeline.json  memory-map.json
tensor-tracing/webui/src/: App.tsx  index.css
tensor-tracing/webui/src/components/: GraphView.tsx  HeatmapView.tsx  TraceView.tsx  TransformerView.tsx  ViewContainer.tsx
tensor-tracker/tools/: MOVED.md
(+7 files in other folders)
